# sisyphus-applies

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  run.sh
backend/: __init__.py  config.py  connect_gmail.py  db.py  init_db.py  logging_config.py  main.py  migrations.py  models.py  schemas.py  seed.py  sync_gmail.py  worker.py
backend/api/: application_sources.py  applications.py  codex.py  companies.py  documents.py  feature_memories.py  gmail.py  prompts.py  rag.py
backend/connectors/: __init__.py  codex_cli.py  llm.py
backend/prompts/: codex_bridge.md  job_post_extraction.md
backend/services/: application_scraper.py  codex_bridge.py  dashboard.py  documents.py  gmail.py  prompts.py  rag.py  ssh_sync.py  web_search.py
backend/tests/: test_application_scraper_codex.py  test_codex_bridge.py  test_dashboard.py  test_document_previews.py  test_feature_memories.py  test_gmail_api.py  test_table_pagination.py
docs/: adr-001-local-llm-model-selection.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_company_notes.py  0009_app_status.py  (+17 more)
scripts/: _common.sh  connect-gmail.ps1  connect-gmail.sh  init-db.ps1  init-db.sh  install-backend.ps1  install-backend.sh  install-frontend.ps1  install-frontend.sh  seed-data.ps1  seed-data.sh  setup-ai.sh  setup.ps1  setup.sh  start-all.ps1  start-all.sh  start-backend.ps1  start-backend.sh  start-frontend.ps1  start-frontend.sh  start-worker.ps1  start-worker.sh  sync-gmail.ps1  sync-gmail.sh
(+37 files in other folders)
