[project]
name = "local-job-tracker"
version = "0.1.0"
description = "Local single-user job search tracker"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "fastapi>=0.115.0",
"filelock>=3.16.0",
    "paramiko>=3.5.0",
    "playwright>=1.52.0",
    "python-docx>=1.1.2",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
backend = ["prompts/*.md"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
